--- a/Authentication/signup.css
+++ b/Authentication/signup.css
@@ -10,6 +10,7 @@ body{
   background-image: radial-gradient( circle farthest-corner at 10% 20%,  rgba(171,102,255,1) 0%, rgba(116,182,247,1) 90% );
   width: 100% ;
   font-size: 18px;
+  font-weight : 200;
 }
 .signupOuerContainer{
   display: flex;
